objects/Web_to_request1__c/Web_to_request1__c.object-meta.xml
<CustomObject>
    <label>Web to request</label>
    <nameField>
        <displayFormat>WTR-{0000000}</displayFormat>
        <label>Web to request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Web to requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>