objects/Web_to_request1__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User.</label>
    <referenceTo>UserRegistration__c</referenceTo>
    <relationshipLabel>Web to requests</relationshipLabel>
    <relationshipName>Web_to_requests</relationshipName>
    <type>Lookup</type>
</CustomField>